@@ -85,7 +85,8 @@ exportMethods(
 ".glabel", ".gbutton", ".gcheckbox", ".gradio", ".gdroplist",
 ".gcheckboxgroup", ".gspinbutton", ".gslider", ".gedit", ".gtext",
 ".gmenu", ".gtoolbar", ".gtable",  
-".gfile", ".gfilebrowse", 
+".gfile", ".gfilebrowse",
+              ".ghtml",
 ".gimage", ".gstatusbar", ".gseparator",
 ".gvarbrowser", ".gwindow", ".ggroup", ".gframe", ".gexpandgroup",
 ".gnotebook", ".glayout",
