@@ -8,6 +8,7 @@ Changes for 0.0-44
 
 * bug fixes for gcomobobox (Thanks Erich, Yves)
 
+* added stub for ghtml
 
 Changes for 0.0-43
 -------------------
